<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Savier</string>
    <string name="add_goal">Add a goal</string>
    <string name="select_goal">Create goal with this item</string>
    <string name="confirm_goal">Add goal</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nunc augue, sagittis ut sagittis
        ut, varius fringilla arcu. In hac habitasse platea dictumst. Nunc volutpat lectus et mauris sodales, vel
        vestibulum augue fringilla. Cras ut enim semper, tincidunt ante vitae, molestie quam. Quisque semper est vel
        velit gravida dictum. Mauris auctor pharetra malesuada. Sed et volutpat dolor. Lorem ipsum dolor sit amet,
        consectetur adipiscing elit. Pellentesque tempus aliquam lorem id rhoncus. Aenean in tincidunt odio, blandit
        pharetra felis. Mauris sit amet risus purus. Cras est est, condimentum in mi vel, hendrerit tristique ipsum.
        Quisque a elit a tortor porttitor pretium. Pellentesque blandit sed dui a adipiscing.</string>
    <string name="add_new_goal">Add new goal</string>
    <string name="next">Next</string>
    <string name="open_setup">Setup</string>
    <string name="title_activity_personal_info">Setup</string>
    <string name="title_activity_goal_detail">GoalDetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="per_info_header">Please Enter Your Personal Information</string>
    <string name="setup_title">Personal Information</string>
    <string name="start_setup">Start Setup</string>
    <string name="billing_address_checkbox">Billing Address is same as Shipping Address</string>
    <string name="default_first_name">First Name</string>
    <string name="default_last_name">Last Name</string>
    <string name="default_email_address">Email Address</string>
    <string name="default_shipping_address">Shipping Address</string>
    <string name="default_address_line2">Address Line 2</string>
    <string name="default_city">City</string>
    <string name="default_state">State</string>
    <string name="default_zip">Zip Code</string>
    <string name="title_activity_billing_addr">Setup</string>
    <string name="title_activity_card">Setup</string>
    <string name="enter_personal_info">Enter Personal Information</string>
    <string name="enter_billing_info">Enter Billing Address</string>
    <string name="default_billing_address">Billing Address</string>
    <string name="enter_card_info">Enter Debit Card Information</string>
    <string name="card_title">Debit Card Information</string>
    <string name="default_name">Name</string>
    <string name="default_card_number">Card Number</string>
    <string name="default_month">MM</string>
    <string name="default_year">YY</string>
    <string name="default_cvv">CVV</string>
    <string name="slash">/</string>
    <string name="title_activity_setup_confirm">Setup</string>
    <string name="confirm">Confirm</string>
    <string name="setup_confirm">Verify details</string>
    <string name="name_title">Name : </string>
    <string name="email_title">Email  : </string>

</resources>
