 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ScrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".PersonalInfoActivity" >
<RelativeLayout
   
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    
    android:orientation="vertical" >

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:paddingTop="12dp"
        
         />

    <TextView
        android:id="@+id/setup_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/progressBar1"
        android:layout_alignParentLeft="true"
		android:paddingLeft="5dp"
        android:layout_marginBottom="16dp"
        
        android:text="@string/setup_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/edit_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/setup_header"
        android:layout_below="@+id/setup_header"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/default_first_name"
        android:inputType="textPersonName"
        android:focusable="true" 
        />

    <EditText
        android:id="@+id/edit_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_first_name"
        android:layout_below="@+id/edit_first_name"
        android:ems="10"
        android:hint="@string/default_last_name"
        android:inputType="textPersonName" >

     

    </EditText>

    

    <EditText
        android:id="@+id/edit_shipping_address1"
        android:hint="@string/default_shipping_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_email_address"
        android:layout_below="@+id/edit_email_address"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/edit_email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_last_name"
        android:layout_below="@+id/edit_last_name"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/default_email_address"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edit_shipping_address2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_shipping_address1"
        android:layout_below="@+id/edit_shipping_address1"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:hint="@string/default_address_line2" />

    <EditText
        android:id="@+id/edit_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="14dp"
        android:maxWidth="28dp"
        android:layout_alignLeft="@+id/edit_shipping_address2"
        android:layout_below="@+id/edit_shipping_address2"
        android:ems="10"
        android:hint="@string/default_city"
        android:inputType="textPostalAddress" />
    <EditText
        android:id="@+id/edit_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/edit_city"
        android:hint="@string/default_state"
        android:layout_below="@+id/edit_shipping_address2"
        android:ems="10"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/edit_zip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/edit_city"
        android:ems="5"
        android:hint="@string/default_zip"
        android:inputType="number"
        android:maxWidth="5dp" />

    <CheckBox
        android:id="@+id/billing_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_first_name"
       android:layout_below="@+id/edit_zip"
        android:paddingTop="20dp"
        android:text="@string/billing_address_checkbox" />

    <Button
        android:id="@+id/submit_per_info_button"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_below="@+id/billing_checkbox"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="center"
        android:layout_alignParentRight="true"
        android:text="@string/next" />
    	

    </RelativeLayout>
     </ScrollView>


