<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:id="@+id/card_view"
                tools:context=".CardActivity" >

        <ProgressBar
                android:id="@+id/progressBar3"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:paddingTop="12dp"

                />

        <TextView
                android:id="@+id/card_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/progressBar3"
                android:layout_alignParentLeft="true"
                android:paddingLeft="5dp"
                android:layout_marginBottom="16dp"
                android:text="@string/card_title"
                android:textAppearance="?android:attr/textAppearanceLarge"  />

    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:id="@+id/relativeLayout" android:layout_alignParentRight="true"
                    android:layout_below="@+id/progressBar3" android:layout_alignParentLeft="true"
                    android:background="@color/action_bar_gray" android:padding="10dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bank Card"
                android:id="@+id/card_label" android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true" android:textColor="@android:color/holo_blue_light"
                android:textSize="25sp" android:fontFamily="sans-serif-light"/>
        <EditText
                android:id="@+id/edit_card_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/card_label"
                android:layout_marginTop="17dp"
                android:ems="10"
                android:hint="@string/default_card_number"
                android:inputType="number"
                android:maxLength="16"
                android:focusable="true"
                android:clickable="true" android:textColor="@android:color/primary_text_dark"
                android:textColorHint="@android:color/secondary_text_dark"/>
        <EditText
                android:id="@+id/edit_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/edit_card_number"
                android:layout_below="@+id/edit_card_number"
                android:ems="10"
                android:hint="@string/default_name"
                android:inputType="textPersonName" android:textColorHint="@android:color/secondary_text_dark"
                android:textColor="@android:color/primary_text_dark"/>

        <EditText
                android:id="@+id/edit_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_name"
                android:ems="3"
                android:hint="@string/default_month"
                android:inputType="number"
                android:maxLength="2" android:textColorHint="@android:color/secondary_text_dark"
                android:textColor="@android:color/primary_text_dark" android:layout_toLeftOf="@+id/card_slash">
        </EditText>
        <EditText
                android:id="@+id/edit_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/edit_month"
                android:layout_alignBottom="@+id/edit_month"
                android:ems="3"
                android:hint="@string/default_year"
                android:inputType="number"
                android:maxLength="2" android:textColorHint="@android:color/secondary_text_dark"
                android:textColor="@android:color/primary_text_dark"
                android:layout_alignRight="@+id/edit_name"/>
        <EditText
                android:id="@+id/edit_cvv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:hint="@string/default_cvv"
                android:inputType="number"
                android:maxLength="3" android:layout_toRightOf="@+id/edit_card_number"
                android:layout_alignTop="@+id/edit_card_number"
                android:textColorHint="@android:color/secondary_text_dark"
                android:textColor="@android:color/primary_text_dark"/>

        <TextView
                android:id="@+id/card_slash"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/edit_month"
                android:layout_alignBottom="@+id/edit_month"
                android:ems="10"
                android:text="@string/slash" android:password="false" android:singleLine="true"
                android:gravity="right" android:layout_toLeftOf="@+id/edit_year"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Expiration"
                android:id="@+id/expiration_label"
                android:layout_alignParentLeft="false" android:layout_alignBaseline="@+id/edit_month"
                android:layout_toLeftOf="@+id/edit_month"/>

    </RelativeLayout>

    <Button
            android:id="@+id/submit_card_button"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/next"
            android:layout_alignRight="@+id/relativeLayout" android:layout_below="@+id/relativeLayout"/>

</RelativeLayout>